--- a/assets/styl/media/980.styl
+++ b/assets/styl/media/980.styl
@@ -1,13 +1,7 @@
 body
-    
   section
     w 100%
     clearfix()
-
-    h3
-      bt 1px solid bc
-      display block
-      w 100%
 
     div.prop, div.free, div.notes
       float left
@@ -25,5 +19,7 @@ body
       clear none
       w 35%
       bl 1px solid bc
+      h3
+        bt none
       p
         f 14px/1.5 sans
