--- a/assets/styl/mixins/type.styl
+++ b/assets/styl/mixins/type.styl
@@ -26,7 +26,8 @@ h2
   c #333
   fw bold
   p 0 x*.5
-  bt 3px solid #333
+  bt 1px solid txt
+  bb 1px solid bc
 
 h3
   lh 2
