--- a/assets/styl/sections/table.styl
+++ b/assets/styl/sections/table.styl
@@ -1,5 +1,9 @@
 /* PROPRIETARY */
 
+.prop
+  &.empty
+    d none
+
 .prop ul
   p .5em 0 .75em
   bb 1px solid #ddd
